--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.deshiPonno</string>
+	<string>coco.it.deshiPonno</string>
 	<key>PROJECT_ID</key>
 	<string>deshiponnos</string>
 	<key>STORAGE_BUCKET</key>
