--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = deshi_ponno
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.deshiPonno
+PRODUCT_BUNDLE_IDENTIFIER = coco.it.deshiPonno
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
