--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   firebase_database: ^10.5.4
   dynamic_color: ^1.7.0
   barcode_scan2: ^4.3.3
+  # flutter_scanner_devxhub: ^1.0.1
+  flutter_bloc: ^8.1.6
+  firebase_auth: ^4.20.0
+  get_it: ^7.7.0
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   # tflite: ^1.1.2
 
 dev_dependencies:
@@ -62,9 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
