--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   equatable: ^2.0.5
   lottie: ^3.1.2
   google_mobile_ads: ^5.1.0
+  ai_barcode_scanner: ^5.1.1+2
   # tflite: ^1.1.2
 
 dev_dependencies:
