--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.1+1
+version: 0.0.2+1
 
 environment:
   sdk: ">=3.3.1 <4.0.0"
@@ -37,8 +37,6 @@ dependencies:
   firebase_core: ^2.30.1
   firebase_database: ^10.5.4
   dynamic_color: ^1.7.0
-  barcode_scan2: ^4.3.3
-  # flutter_scanner_devxhub: ^1.0.1
   flutter_bloc: ^8.1.6
   firebase_auth: ^4.20.0
   get_it: ^7.7.0
@@ -47,6 +45,7 @@ dependencies:
   lottie: ^3.1.2
   google_mobile_ads: ^5.1.0
   ai_barcode_scanner: ^5.1.1+2
+  flutter_svg: ^2.0.10+1
   # tflite: ^1.1.2
 
 dev_dependencies:
@@ -74,6 +73,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/lottie/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
