updated dark mode settings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_mobile_ads: ^5.1.0
   ai_barcode_scanner: ^5.1.1+2
   flutter_svg: ^2.0.10+1
+  shared_preferences: ^2.3.2
   # tflite: ^1.1.2
 
 dev_dependencies:
