--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   shared_preferences: ^2.3.2
   cached_network_image: ^3.4.0
+  intl: ^0.19.0
   # tflite: ^1.1.2
 
 dev_dependencies:
