--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
     - assets/lottie/
     - assets/images/
     - assets/lang/
+    - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -93,18 +94,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Bishal
+      fonts:
+        - asset: assets/fonts/bishal.ttf
+        - asset: assets/fonts/bishalItalic.ttf
+          style: italic
+    - family: Liakot
+      fonts:
+        - asset: assets/fonts/liakot.ttf
+        - asset: assets/fonts/liakotItalic.ttf
+          style: italic
+    - family: Shreyam
+      fonts:
+        - asset: assets/fonts/shreyam.ttf
+        - asset: assets/fonts/shreyamItalic.ttf
+          style: italic
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 flutter_launcher_icons:
