--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   shared_preferences: ^2.3.2
   cached_network_image: ^3.4.0
   intl: ^0.19.0
+  flutter_slidable: ^3.1.1
+  flutter_cache_manager: ^3.4.1
   # tflite: ^1.1.2
 
 dev_dependencies:
