--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.2.2+22
+version: 0.2.3+23
 
 environment:
   sdk: ">=3.3.1 <4.0.0"
@@ -51,8 +51,8 @@ dependencies:
   shared_preferences: ^2.3.2
   cached_network_image: ^3.4.0
   intl: ^0.19.0
-  flutter_slidable: ^3.1.1
-  flutter_cache_manager: ^3.4.1
+  # flutter_slidable: ^3.1.1
+  # flutter_cache_manager: ^3.4.1
   # tflite: ^1.1.2
 
 dev_dependencies:
