added google login

--- a/firebase.json
+++ b/firebase.json
@@ -1,22 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "deshiponnos",
-          "appId": "1:1009900446483:android:03520d2451b8201f8bb0e6",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "deshiponnos",
-          "configurations": {
-            "android": "1:1009900446483:android:03520d2451b8201f8bb0e6",
-            "web": "1:1009900446483:web:ae3523a127f331ad8bb0e6"
-          }
-        }
-      }
-    }
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"deshi-ponno","appId":"1:204825377289:android:85bcc72f932778eaea56d8","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"deshi-ponno","configurations":{"android":"1:204825377289:android:85bcc72f932778eaea56d8"}}}}}}
