--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cached_network_image: ^3.4.0
   intl: ^0.19.0
   google_sign_in: ^6.2.1
+  smooth_page_indicator: ^1.2.0+3
   # flutter_slidable: ^3.1.1
   # flutter_cache_manager: ^3.4.1
   # tflite: ^1.1.2
