--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.3.2+32
+version: 0.3.4+34
 
 environment:
   sdk: ">=3.3.1 <4.0.0"
@@ -57,8 +57,8 @@ dependencies:
   flutter_slidable:
     path: ./packages/flutter_slidable-3.1.1/
   permission_handler: ^11.3.1
-  rive_animated_icon: ^2.0.1
-  rive: ^0.13.14
+  # rive_animated_icon: ^2.0.1
+  # rive: ^0.13.14
   in_app_review: ^2.0.9
   in_app_purchase: ^3.2.0
   # flutter_cache_manager: ^3.4.1
