--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.3.5+35
+version: 0.3.7+37
 
 environment:
   sdk: ">=3.3.1 <4.0.0"
@@ -61,6 +61,7 @@ dependencies:
   # rive: ^0.13.14
   in_app_review: ^2.0.9
   in_app_purchase: ^3.2.0
+  curved_navigation_bar: ^1.0.6
   # flutter_cache_manager: ^3.4.1
   # tflite: ^1.1.2
 
