--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   in_app_review: ^2.0.9
   in_app_purchase: ^3.2.0
   curved_navigation_bar: ^1.0.6
+  firebase_analytics: ^10.10.7
   # flutter_cache_manager: ^3.4.1
   # tflite: ^1.1.2
 
